--- a/css/geogec_app_docs.css
+++ b/css/geogec_app_docs.css
@@ -52,7 +52,39 @@
 		text-align:center;
 		border:solid 1px gray;
 	}
+	a#encabezado{
+		text-shadow: 1px 1px #08afd9;
+		margin:2px;
+		border:none;
+	}
 	
+	a#encabezado > h2{	
+		display: inline-block;
+		width: 90px;
+		font-size:32px;
+	}
+	a#encabezado > p{	
+		display: inline-block;
+		width: 190px;
+		font-size:12px;
+	}
+	
+	
+	a.fila {
+		color:#000;
+	    width: 360px;
+	    height: auto;
+	    border-top: 3px solid #CDF0F9;
+	    display: block;
+	    font-size: 15px;
+	    height: 34px;
+	    overflow: hidden;
+	}	
+	a#botonanadir{
+		display: inline-block;
+		width: 120px;
+		font-size:14px;		
+	}
 	#page > div#cuadrovalores{
 		display:inline-block;
 		width:40%;
@@ -170,7 +202,7 @@
 	}
 	.accion{
 		width:45px;
-		line-height:12px:
+		line-height:12px;
 	}		
 	
 	.aclaracionsubmit{
@@ -274,9 +306,10 @@ button{
 }
 
 #contenidoextenso{
-	overflow:hidden;
 	width:1000px;
-	margin-top:20px;
+	margin-top: 10px;
+	height: calc( 100vh - 265px);
+	overflow-y: scroll;
 }	
 
 @media print {
@@ -398,7 +431,8 @@ button{
 
 #page>div{
 	font-size:11px;
-		display:block;
+	display:block;
+	position:relative;
 }
 form{
 	display:inline-block;
@@ -472,19 +506,16 @@ input[checked='checked'] + span{
     color:#F7F7F7;
 }
 
-#uploader{
-
-}
 #contenedorlienzo{
 	vertical-align:top;
-	display:block;
-	position:relative;
 	box-shadow:2px 2px 5px 2px rgba(0,0,0,0.5) inset;
+        display:inline-block;
 }
 
 
 #editorArchivos #contenedorlienzo{
 	height:60px;
+        display:inline-block;
 }
 
 .botoncerrar{
@@ -528,11 +559,41 @@ input[checked='checked'] + span{
 	left:0;
 	display:inline-block;
 }
+#contenedorlienzo #uploadinputlink{
+	opacity:0;
+	height:100%;
+	width:100%;
+	position:absolute;
+	top:0;
+	left:0;
+        height:calc(100% - 40px);
+	width:calc(100% - 50px);
+	font-size:15px;
+	color:#999;
+	margin:20px;
+	text-align:center;
+	line-height:20px;
+	display: inline-block;
+}
 form{
 	border:2px solid #aaa;	
 }
 
-#archivos > div, #archivos > form{
+ #editordoc, #editoritem, crearlinkform{
+	vertical-align:middle;
+	display:inline-block;
+	height:80px;
+	width:200px;
+ }
+ 
+ #uploader {
+        vertical-align:middle;
+	display:inline-block;
+	height:80px;
+	width:404px;
+ }
+
+#archivos > div{
 	vertical-align:middle;
 	display:inline-block;
 	height:80px;
@@ -543,9 +604,8 @@ form{
 	border:2px solid #aaa;
 	border-radius:2px;
 	position:relative;
+        display:inline-block;
 }
-
-
 
 #listadosubiendo > p{
 	display:block;
@@ -560,6 +620,7 @@ form{
 	border:2px solid #aaa;
 	border-radius:2px;
 	position:relative;
+        display:inline-block;
 }
 #listadosubiendo label, #listadoaordenar label{
 	position:absolute;
@@ -582,7 +643,8 @@ form{
 	background-color:#fbb;
 	cursor:move;
 	width:calc(100% - 15px);
-	max-width:221px;
+	max-width:215px;
+	word-wrap: break-word;
 }
 
 
@@ -606,180 +668,564 @@ a.archivo:hover{
 	font-size:11px;
 }
 
-	
-#contenidoextenso{
-	margin-top:10px;
+#archivos > #botonanadir{
+	background-color: rgba(8,175,217,0.3);
+	color:#08afd9;
+	height: 80px;
+	vertical-align: middle;
+	font-size: 40px;
+	text-align: center;
+	width: 50px;
+	border: 2px solid #08afd9;
+	border-radius: 2px;
+	box-shadow: 1px 1px 3px 1px rgba(0,0,0,0.2);
+	margin:0px;
 }
-	
-	
-	
-	div#modelos{
-		display:none;
-	}
-	#botonanadir{
-		display:block;
-		margin:20px;
-	}
-	.medio{
-		display: inline-block;
-		height: 91px;
-		width: 10px;
-		border: 1px solid silver;
-		position: relative;
-		vertical-align: middle;
-		transition: width 0.5s;
-		background-color: rgba(50,50,50,0.2);
-		margin-top:2px;
-		margin-left:1px;
+#archivos > a#botonanadir:hover{
+	background-color: #08afd9;
+	color:#fff;
+}
 
-	}
-	.medio > div{
-		height: 10px;
-		width: 476px;
-		top:-1px;
-		left:10px;
-		border: 1px solid silver;
-		border-left: 1px solid #dadada;
-		background-color:inherit;		
-		position: absolute;	
-		height: 10px;
-	}
-	.item[nivel="1"] .submedio{
-		width:213px;
-	}
-	.item[nivel="2"] .submedio{
-		display:none;
-	}
-	.item[nivel="2"] .medio{
-		width:calc(100% - 4px);
-		height:10px;
-	}
-		
-	.item{
-		display:inline-block;
-		width:calc(50% - 20px);
-		min-width:100px;
-		min-height:60px;
-		border:1px solid #08afd9;
-		box-shadow:6px 6px 8px rgba(30, 30, 30, 0.5);
-		margin: 15px 1px 4px 1px;
-		vertical-align: top;
-	}
-
-	.item[nivel="0"]{
-		width:471px;
-	}
-	
-	.item[nivel="1"]{
-		width:calc(50% - 20px);
-	}
-	.item[nivel="2"] .item{
-		width:calc(100% - 4px);
-		margin-top:2px;
-	}	
-	.hijos{
-		display: inline-block;
-		width: calc(100% - 14px);
-		min-width: 80px;
-		min-height: 43px;
-		border: 1px dashed #ebb;
-		margin: 1px 1px 1px 10px;
-		background-color: #fff;
-	}	
-	
-			
-
-	
-	
-	.item h3{
-		display:block;
-		margin: 0 0 0 0px ;
-		cursor:move;
-	}
-	.item p{
-		cursor:move;
-	}
+#archivos > #botonanadir > span{
+	font-size:11px;	
+}
 
 
-	#editoritem{
-		display:none;
-		position:fixed;
-		top:20vh;
-		height:60vh;
-		min-height:calc(10vh + 125px);		
-		left:20vw;
-		width:60vw;
-		background-color:#fff;
-		border:1px solid #08afd9;
-		z-index:20;
-		box-shadow:10px 10px 40px rgba(0,0,0,0.8);
-	}
-	#editoritem label, #editoritem input, #editoritem textarea{
-		display:block;
-		float:none;
-		width:40vw;
-		margin-left:10vw;
-	}
-	#editoritem label{
-		margin-top:5vh;
-	}
-	#editoritem #botoncierra{
-		position:absolute;
-		width:auto;
-		text-align:right;
-		right:1vw;
-		top:1vh;
-	}
-	#editoritem input[type='submit']{
-		position:absolute;
-		width:auto;
-		text-align:right;
-		right:1vw;
-		top:4vh;
-		background:transparent;
-		border: none;
-		margin:0;
-		padding:0;
-	}
-	#editoritem input[type='submit']:hover{
-		background-color:#08afd9;
-		color:#000;	
-	}
-	
-	#editoritem #botonelimina{
-		color:red;
-		position:absolute;
-		width:auto;
-		text-align:right;
-		right:1vw;
-		top:calc(7vh + 7px);
-	}
-	#editoritem a#botonelimina:hover{
-		background-color:red;
-		color:#000;	
-	}
-	#editoritem textarea{
-		font-family:'Ropa Sans-local', 'Ropa Sans', sans-serif;
-		font-size:12px;
-		height:calc(60vh - 10vh - 70px);
-		min-height:60px;
-	}
-	
-	.item{
-		background-color:#fff;
-	}
-	.item[resaltado="si"]{
-		background-color:#49c;
-	}
-	div[destino='si']{		
-		background-color:#047;
-	}
-	
-	div.item[destinof='si']{		
-		background-color:red;
-	}
-	
-	
-	#archivos > div#eliminar[destinof='si']{		
-		background-color:#900;
-	}
+#editoritem > #botonanadir{
+background-color: rgba(8,175,217,0.3);
+line-height: 16px;
+color: #08afd9;
+height: 40px;
+vertical-align: middle;
+font-size: 20px;
+text-align: center;
+width: 40px;
+border: 2px solid #08afd9;
+border-radius: 2px;
+box-shadow: 1px 1px 3px 1px rgba(0,0,0,0.2);
+margin: 0px;
+position: absolute;
+top: 90px;
+right: 10px;
+}
+#editoritem > a#botonanadir:hover{
+	background-color: #08afd9;
+	color:#fff;
+}
+
+#editoritem > #botonanadir > span{
+	font-size:11px;	
+	line-height: 10px;
+}
+div#modelos{
+        display:none;
+}
+#botonanadir{
+        display:block;
+        margin:20px;
+}
+.medio{
+        display: inline-block;
+        height: 91px;
+        width: 10px;
+        border: 1px solid silver;
+        position: relative;
+        vertical-align: middle;
+        transition: width 0.5s;
+        background-color: rgba(50,50,50,0.2);
+        margin-top:2px;
+        margin-left:1px;
+
+}
+.medio > div{
+        height: 10px;
+       	width: 466px;
+        top:-1px;
+        left:10px;
+        border: 1px solid silver;
+        border-left: 1px solid #dadada;
+        background-color:inherit;		
+        position: absolute;	
+        height: 10px;
+}
+.item[nivel="1"] .submedio{
+        width:210px;
+}
+.item[nivel="2"] .submedio{
+        display:none;
+}
+.item[nivel="2"] .medio{
+        width:calc(100% - 4px);
+        height:10px;
+}
+
+.item{
+        display:inline-block;
+        width:calc(50% - 20px);
+        min-width:100px;
+        min-height:60px;
+        border:1px solid #08afd9;
+        box-shadow:6px 6px 8px rgba(30, 30, 30, 0.5);
+        margin: 15px 1px 4px 1px;
+        vertical-align: top;
+}
+
+.item[nivel="0"]{
+        width:471px;
+}
+
+.item[nivel="1"]{
+        width:calc(50% - 20px);
+}
+.item[nivel="2"] .item{
+        width:calc(100% - 4px);
+        margin-top:2px;
+}	
+.hijos{
+        display: inline-block;
+        width: calc(100% - 14px);
+        min-width: 80px;
+        min-height: 43px;
+        border: 1px dashed #ebb;
+        margin: 1px 1px 1px 10px;
+        background-color: #fff;
+}	
+
+
+
+
+
+.item h3{
+        display:block;
+        margin: 0 0 0 0px ;
+        cursor:move;
+}
+.item p{
+        cursor:move;
+}
+
+#editoritem{
+        display:none;
+        position:fixed;
+        top:15vh;
+        height:70vh;
+        min-height:calc(10vh + 125px);		
+        left:20vw;
+        width:60vw;
+        background-color:#fff;
+        border:1px solid #08afd9;
+        z-index:20;
+        box-shadow:10px 10px 40px rgba(0,0,0,0.8);
+}
+#editoritem label, #editoritem input, #editoritem textarea{
+        display:block;
+        float:none;
+        width:40vw;
+        margin-left:10vw;
+}
+#editoritem label{
+        margin-top:5vh;
+}
+#editoritem #botoncierra{
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:1vh;
+}
+#editoritem input[type='submit']{
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:4vh;
+        background:transparent;
+        border: none;
+        margin:0;
+        padding:0;
+}
+#editoritem input[type='submit']:hover{
+        background-color:#08afd9;
+        color:#000;	
+}
+
+#editoritem #botonelimina{
+        color:red;
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:calc(7vh + 7px);
+}
+#editoritem a#botonelimina:hover{
+        background-color:red;
+        color:#000;	
+}
+#editoritem textarea{
+        font-family:'Ropa Sans-local', 'Ropa Sans', sans-serif;
+        font-size:12px;
+        height:calc(35vh - 10vh - 70px);
+        min-height:60px;
+}
+#editoritem input[type='number']{
+        width:3vw;
+        display:inline-block;
+}
+#editoritem input[type='range']{
+        width:10vw;
+        margin-left:1vw;
+        display:inline-block;
+}      
+#editoritem .progresoCambiadoPor{
+        display:inline-block;
+        margin-left:0vw;
+        margin-top:0vw;
+        width:6vw;
+        font-size:11px;
+}
+#editoritem .autorCambioItem{
+        display:inline-block;
+        margin-left:0vw;
+        margin-top:0vw;
+        width:8vw;
+        font-size:11px;
+        background-color: transparent;
+        margin-bottom: 0px;
+        border-bottom: 0px;
+}
+#editoritem .fechaPropuesta{
+        display:inline-block;
+        width:5vw;
+        margin-top:0vw;
+        font-size:12px;
+        margin-left:0vw;
+}
+#editoritem input[type='date']{
+        width:8vw;
+        margin-left:0vw;
+        display:inline-block;
+}
+#editoritem .listaDocumentosAsociados{
+        position: relative;
+        font-weight: normal;
+        width:36vw;
+        margin-left:10vw;
+        height: 10vh;
+        overflow-y: scroll;
+        background-color: transparent;
+        font-family:'Ropa Sans-local', 'Ropa Sans', sans-serif;
+        font-size:12px;
+        margin-bottom: 0px;
+        border: 1px solid #08afd9;
+}
+#editoritem .archivoLista{
+	display:inline-block;
+	border:1px solid red;
+	margin:1px;
+	color:red;
+	background-color:#fbb;
+	width:calc(100% - 15px);
+}
+#editoritem .archivoLista:hover{
+        background-color:#f00;
+	color:black;
+}
+
+/**
+ * Tooltip Styles
+ */
+/* Add this attribute to the element that needs a tooltip */
+[data-tooltip] {
+  position: relative;
+  z-index: 2;
+  cursor: pointer;
+}
+
+/* Hide the tooltip content by default */
+[data-tooltip]:before,
+[data-tooltip]:after {
+  visibility: hidden;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  pointer-events: none;
+}
+
+/* Position tooltip above the element */
+[data-tooltip]:before {
+  position: absolute;
+  bottom: 110%;
+  left: 50%;
+  margin-bottom: 1px;
+  margin-left: -80px;
+  padding: 1px;
+  width: 160px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background-color: #000;
+  background-color: hsla(0, 0%, 20%, 0.9);
+  color: #fff;
+  content: attr(data-tooltip);
+  text-align: center;
+  line-height: 1.2;
+}
+
+/* Triangle hack to make tooltip look like a speech bubble */
+[data-tooltip]:after {
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  width: 0;
+  border-top: 5px solid #000;
+  border-top: 5px solid hsla(0, 0%, 20%, 0.9);
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  content: " ";
+  font-size: 0;
+  line-height: 0;
+}
+
+/* Show tooltip content on hover */
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after {
+  visibility: visible;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+
+
+#editoritem .editarListaDocs{
+        vertical-align:top;
+        width: 3vw;
+        word-wrap: normal;
+}
+
+#formcrearlink{
+        display:none;
+        position:fixed;
+        top:15vh;
+        height:70vh;
+        min-height:calc(10vh + 125px);		
+        left:20vw;
+        width:60vw;
+        background-color:#fff;
+        border:1px solid #08afd9;
+        z-index:20;
+        box-shadow:10px 10px 40px rgba(0,0,0,0.8);
+}
+#formcrearlink label, #formcrearlink input, #formcrearlink textarea{
+        display:block;
+        float:none;
+        width:40vw;
+        margin-left:10vw;
+}
+#formcrearlink label{
+        margin-top:5vh;
+}
+#formcrearlink #botoncierra{
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:1vh;
+}
+#formcrearlink input[type='submit']{
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:4vh;
+        background:transparent;
+        border: none;
+        margin:0;
+        padding:0;
+}
+#formcrearlink input[type='submit']:hover{
+        background-color:#08afd9;
+        color:#000;	
+}
+
+#formcrearlink #botonelimina{
+        color:red;
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:calc(7vh + 7px);
+}
+#formcrearlink a#botonelimina:hover{
+        background-color:red;
+        color:#000;	
+}
+#formcrearlink textarea{
+        font-family:'Ropa Sans-local', 'Ropa Sans', sans-serif;
+        font-size:12px;
+        height:calc(40vh - 10vh - 70px);
+        min-height:60px;
+}
+
+
+#editordoc{
+        display:none;
+        position:fixed;
+        top:20vh;
+        height:60vh;
+        min-height:calc(10vh + 125px);		
+        left:20vw;
+        width:60vw;
+        background-color:#fff;
+        border:1px solid #08afd9;
+        z-index:20;
+        box-shadow:10px 10px 40px rgba(0,0,0,0.8);
+}
+#editordoc label, #editordoc input, #editordoc textarea{
+        display:block;
+        float:none;
+        width:40vw;
+        margin-left:10vw;
+}
+#editordoc label{
+        margin-top:5vh;
+}
+#editordoc #botoncierra{
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:1vh;
+}
+#editordoc input[type='submit']{
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:4vh;
+        background:transparent;
+        border: none;
+        margin:0;
+        padding:0;
+}
+#editordoc input[type='submit']:hover{
+        background-color:#08afd9;
+        color:#000;	
+}
+
+#editordoc #botonelimina{
+        color:red;
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:calc(7vh + 7px);
+}
+#editordoc a#botonelimina:hover{
+        background-color:red;
+        color:#000;	
+}
+#editordoc textarea{
+        font-family:'Ropa Sans-local', 'Ropa Sans', sans-serif;
+        font-size:12px;
+        height:calc(60vh - 10vh - 70px);
+        min-height:60px;
+}
+
+#editarlink{
+        display:none;
+        position:fixed;
+        top:20vh;
+        height:60vh;
+        min-height:calc(10vh + 125px);		
+        left:20vw;
+        width:60vw;
+        background-color:#fff;
+        border:1px solid #08afd9;
+        z-index:20;
+        box-shadow:10px 10px 40px rgba(0,0,0,0.8);
+}
+#editarlink label, #editarlink input, #editarlink textarea{
+        display:block;
+        float:none;
+        width:40vw;
+        margin-left:10vw;
+}
+#editarlink label{
+        margin-top:5vh;
+}
+#editarlink #botoncierra{
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:1vh;
+}
+#editarlink input[type='submit']{
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:4vh;
+        background:transparent;
+        border: none;
+        margin:0;
+        padding:0;
+}
+#editarlink input[type='submit']:hover{
+        background-color:#08afd9;
+        color:#000;	
+}
+
+#editarlink #botonelimina{
+        color:red;
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:calc(7vh + 7px);
+}
+#editarlink a#botonelimina:hover{
+        background-color:red;
+        color:#000;	
+}
+#editarlink textarea{
+        font-family:'Ropa Sans-local', 'Ropa Sans', sans-serif;
+        font-size:12px;
+        height:calc(60vh - 10vh - 70px);
+        min-height:60px;
+}
+
+
+.documentos > a > a{
+        display:inline-block;
+        width:10px;
+        height:10px;
+        border:1px solid;
+        margin:2px;
+        vertical-align:middle;
+}
+.item{
+        background-color:#fff;
+}
+.item[resaltado="si"]{
+        background-color:#49c;
+}
+div[destino='si']{		
+        background-color:#047;
+}
+
+div.item[destinof='si']{		
+        background-color:red;
+}
+
+
+#archivos > div#eliminar[destinof='si']{		
+        background-color:#900;
+}
+
+#menuacciones{
+	position:absolute;
+	top:-25px;
+	right:0px;
+}
