--- a/css/autorias.css
+++ b/css/autorias.css
@@ -23,12 +23,17 @@
 
 
 #pieagpl h2{
-		margin-top:4px;
+	margin-top:14px;
 	margin-left:5px;
 	font-size:15px;
 	color:#08afd9;
 }
+#pieagpl h2:first-child{
+	margin-top:1px;
+}
+
 #pieagpl h3{
+	margin-top:2px;
 	margin-left:5px;
 	font-size:13px;
 }
