--- a/css/geogec_app_plan.css
+++ b/css/geogec_app_plan.css
@@ -68,7 +68,7 @@
     position: fixed;
     top: 20vh;
     height: 60vh;
-    min-height: calc(10vh + 125px);
+    min-height: 170px;
     left: calc((100vw - 790px) / 2);
     width: 790px;
     background-color: #fff;
@@ -91,6 +91,11 @@
 #editorresp > div#incluidos{
     width:486px;
 }
+#editorresp > div#excluidos{
+    height:calc(60vh - 70px);
+    overflow-y: scroll;
+}
+
 #editorresp > div#excluidos, #editorresp > div#incluidos{
     min-height:100px;
 }
@@ -261,9 +266,332 @@
 .CarpetaDocs:hover{ 
 }
 
-#menuacciones{
-	position:absolute;
-	top:0px;
-	right:0px;
+
+
+
+
+
+.item[nivel="1"] .submedio{
+        width:210px;
+}
+.item[nivel="2"] .submedio{
+        display:none;
+}
+.item[nivel="2"] .medio{
+        width:calc(100% - 4px);
+        height:10px;
 }
 
+.item{
+        display:inline-block;
+        width:calc(50% - 20px);
+        min-width:100px;
+        min-height:60px;
+        border:1px solid #08afd9;
+        box-shadow:6px 6px 8px rgba(30, 30, 30, 0.5);
+        margin: 15px 1px 4px 1px;
+        vertical-align: top;
+}
+
+.item[nivel="0"]{
+        width:471px;
+}
+
+.item[nivel="1"]{
+        width:calc(50% - 20px);
+}
+.item[nivel="2"] .item{
+        width:calc(100% - 4px);
+        margin-top:2px;
+}	
+
+
+.item[representacion="entero"]{
+	width: calc(100% - 20px);
+}
+
+.medio[representacion="entero"] .submedio{
+	width: 466px;
+	
+}
+.medio[representacion="entero"]:before{
+	  content: " ";
+		white-space: pre-wrap;
+}
+
+.item[nivel="1"][representacion="entero"] .submedio{
+	width: calc(100% - 30px);
+	
+}
+
+.item[nivel="2"] .medio {
+	width:10px;
+	height: calc(100% + 13px);
+}
+
+.item[nivel="2"] .submedio {
+	display:block;
+}
+.item[nivel="2"] .item {
+	margin:14px 1px 4px 14px;
+	width: calc(100% - 17px);
+}
+
+.medio {
+    display: block;
+    position:absolute;
+    top:-16px;
+    left:-15px;
+    width: 10px;
+	background-color: rgba(50,50,50,0.2);
+	height: calc(100% + 13px);
+    border: 1px solid silver;
+    vertical-align: middle;
+    transition: width 0.5s;
+    margin-top: 2px;
+    margin-left: 1px;
+    z-index:1;
+}
+.medioA{
+    display: block;
+    position:absolute;
+    top:-16px;
+    left:-4px;
+    width: calc(100% + 2px);
+	background-color: rgba(50,50,50,0.2);
+	height: 10px;
+    border: 1px solid silver;
+    vertical-align: middle;
+    transition: width 0.5s;
+    margin-top: 2px;
+    margin-left: 1px;
+    z-index:1;
+}
+.item{
+	position:relative;
+	margin:14px 1px 4px 14px;
+	z-index:2;
+	background-color:#fff;
+}
+
+.item p {
+    cursor: move;
+}
+
+.item{
+        background-color:#fff;
+}
+.item[resaltado="si"]{
+        background-color:#49c;
+}
+div[destino='si']{		
+        background-color:#047;
+}
+
+div.item[destinof='si']{		
+        background-color:red;
+}
+
+.hijos{
+    display: inline-block;
+    width: calc(100% - 14px);
+    min-width: 80px;
+    min-height: 43px;
+    border: 1px dashed #ebb;
+    margin: 1px 1px 1px 10px;
+    background-color: #fff;
+}
+
+.CarpetaDocs[tipodoc='carpeta']{
+    display:none;
+}
+.CarpetaDocs[tipodoc='carpeta'][contenido='si']{
+    display:block;
+}
+
+#editorlistadocs > div#incluidos div[tipodoc='carpeta'][estado="incluido"] {
+    display: block;
+}
+
+#editorlistadocs > div#excluidos div[tipodoc='carpeta']{
+	border-top:1px dashed #666;  
+    color: #000;
+    cursor: pointer;
+}
+
+#editorlistadocs > div#excluidos div[tipodoc='carpeta'][estado='incluido']{
+    color: #999;
+    cursor: not-allowed ;
+    display:block;
+}
+#modelos{
+	display: none;
+}
+
+
+#editoritem {
+	vertical-align:top;
+    word-wrap: normal;
+    display: none;
+    position: fixed;
+    top: 15vh;
+    height: 70vh;
+    left: 20vw;
+    width: 60vw;
+    background-color: #fff;
+    border: 1px solid #08afd9;
+    z-index: 20;
+    box-shadow: 10px 10px 40px rgba(0,0,0,0.8);
+	min-height:380px;
+} 
+
+#editoritem input[type='date']{
+        width:8vw;
+        margin-left:0vw;
+        display:inline-block;
+}
+
+#editoritem .fechaPropuesta{
+        display:inline-block;
+        width:5vw;
+        margin-top:0vw;
+        font-size:12px;
+        margin-left:0vw;
+}
+
+#editoritem input[type='number']{
+        width:3vw;
+        display:inline-block;
+}
+#editoritem input[type='range']{
+        width:10vw;
+        margin-left:1vw;
+        display:inline-block;
+}      
+#editoritem .progresoCambiadoPor{
+        display:inline-block;
+        margin-left:0vw;
+        margin-top:0vw;
+        width:6vw;
+        font-size:11px;
+}
+#editoritem .autorCambioItem{
+        display:inline-block;
+        margin-left:0vw;
+        margin-top:0vw;
+        width:8vw;
+        font-size:11px;
+        background-color: transparent;
+        margin-bottom: 0px;
+        border-bottom: 0px;
+}
+#editoritem label, #editoritem input, #editoritem textarea, #editoritem div#contenidos{
+        display:block;
+        float:none;
+        width:45vw;
+        margin-left:5vw;
+}
+#editoritem div#contenidos{
+	border:1px solid #aaa;
+	height:calc(70vh - 2px - 35vh - 70px);
+	min-height:30px;
+}
+
+#editoritem label{
+        margin-top:2vh;
+}
+#editoritem #botoncierra{
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:1vh;
+}
+#editoritem input[type='submit']{
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:4vh;
+        background:transparent;
+        border: none;
+        margin:0;
+        padding:0;
+}
+#editoritem input[type='submit']:hover{
+        background-color:#08afd9;
+        color:#000;	
+}
+
+#editoritem #botonelimina{
+        color:red;
+        position:absolute;
+        width:auto;
+        text-align:right;
+        right:1vw;
+        top:calc(7vh + 7px);
+}
+#editoritem a#botonelimina:hover{
+        background-color:red;
+        color:#000;	
+}
+#editoritem textarea{
+        font-family:'Ropa Sans-local', 'Ropa Sans', sans-serif;
+        font-size:12px;
+        height:calc(35vh - 10vh - 70px);
+        min-height:60px;
+}
+
+
+#editoritem .editarListaDocs{
+        vertical-align:top;
+        width: 3vw;
+        word-wrap: normal;
+}
+
+#editoritem .listaDocumentosAsociados {
+    width: 45vw;
+    margin-left: 5vw;
+    height: calc(40vh - 101px);
+}
+#editoritem .archivoLista:hover {
+    background-color: #f00;
+    color: black;
+}
+#editoritem .archivoLista {
+    display: block;
+    margin: 1px;
+    width: calc(100% - 1px);
+    background-color:transparent;
+    border:none;
+}
+#editoritem .archivoLista #nombre{
+    display: inline-block;
+    border: 1px solid red;
+    margin: 1px;
+    color: red;
+    background-color: #fbb;
+    width: calc(70% - 30px);
+    height:15px;
+    overflow:hidden;
+	vertical-align: middle;
+}
+#editoritem .archivoLista #comentario{
+    display: inline-block;
+    margin: 1px;
+    color: #000;
+    font-size:10px;
+    width: calc(30% + 7px);
+    max-height:15px;
+    overflow:hidden;
+    line-height: 8px;
+	vertical-align: middle;
+}
+#editoritem .archivoLista #img{
+    width: 17px;
+	height: 15px;
+	overflow: hidden;
+	display: inline-block;
+	text-align: center;
+	vertical-align: middle;
+}
